# solana-amm

./: .gitignore  Cargo.toml  README.md  acc_ownership.drawio
keypair/: amm-keypair.json
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  pda.rs  processor.rs  state.rs  swap.rs
tests/: basic.rs  integration.rs
